// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> создает обертку вокруг иконки и единственного слова во внешней ссылке 1`] = `
<Link
  as="a"
  bold={false}
  colorScheme="green"
  external={true}
  href="#"
  mode=""
  size="lg"
  theme={null}
>
  <SimpleExternalLink
    className="link lg green"
    data-unit="link:external"
    href="#"
    iconName="icon:core/common/external"
    rel="noopener noreferrer"
    target="_blank"
    theme={null}
  >
    <a
      className="link lg green"
      data-unit="link:external"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="externalWrapper"
      >
        <span
          className="last"
        >
          Cсылка
        </span>
        <Icon
          name="icon:core/common/external"
          onClick={[Function]}
          onError={[Function]}
          size="self"
          theme={
            Object {
              "self": "self icon right",
            }
          }
        >
          <span
            className="self icon right"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path fill-rule=\\"nonzero\\" d=\\"M11 8H8.5a.5.5 0 00-.5.5v7a.5.5 0 00.5.5h7a.5.5 0 00.5-.5V13h1v3a1 1 0 01-1 1H8a1 1 0 01-1-1V8a1 1 0 011-1h3v1zm5.793-1.5H14a.5.5 0 110-1h4a.498.498 0 01.5.5v4a.5.5 0 11-1 0V7.207l-5.146 5.147a.5.5 0 01-.708-.708L16.793 6.5z\\"/></svg>",
              }
            }
            data-unit="icon"
            onClick={[Function]}
            onError={[Function]}
          />
        </Icon>
      </span>
    </a>
  </SimpleExternalLink>
</Link>
`;

exports[`<Link /> создает обертку вокруг иконки и последнего слова во внешней ссылке 1`] = `
<Link
  as="a"
  bold={false}
  colorScheme="green"
  external={true}
  href="#"
  mode=""
  size="lg"
  theme={null}
>
  <SimpleExternalLink
    className="link lg green"
    data-unit="link:external"
    href="#"
    iconName="icon:core/common/external"
    rel="noopener noreferrer"
    target="_blank"
    theme={null}
  >
    <a
      className="link lg green"
      data-unit="link:external"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        className="content"
      >
        Внешняя 
      </span>
      <span
        className="externalWrapper"
      >
        <span
          className="last"
        >
          ссылка
        </span>
        <Icon
          name="icon:core/common/external"
          onClick={[Function]}
          onError={[Function]}
          size="self"
          theme={
            Object {
              "self": "self icon right",
            }
          }
        >
          <span
            className="self icon right"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path fill-rule=\\"nonzero\\" d=\\"M11 8H8.5a.5.5 0 00-.5.5v7a.5.5 0 00.5.5h7a.5.5 0 00.5-.5V13h1v3a1 1 0 01-1 1H8a1 1 0 01-1-1V8a1 1 0 011-1h3v1zm5.793-1.5H14a.5.5 0 110-1h4a.498.498 0 01.5.5v4a.5.5 0 11-1 0V7.207l-5.146 5.147a.5.5 0 01-.708-.708L16.793 6.5z\\"/></svg>",
              }
            }
            data-unit="icon"
            onClick={[Function]}
            onError={[Function]}
          />
        </Icon>
      </span>
    </a>
  </SimpleExternalLink>
</Link>
`;
